squashing length bugs

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -63,12 +63,10 @@ button {
 }
 
 .blinking{
-    animation:blinkingText 1.2s infinite;
+    animation:blinkingText 1.0s infinite;
 }
 @keyframes blinkingText{
-    0%{     color: #000;    }
-    49%{    color: #000; }
-    60%{    color: transparent; }
-    99%{    color:transparent;  }
-    100%{   color: #000;    }
+    0%{     color: #545149;    }
+    50%{    color: transparent; }
+    100%{   color: #545149;   }
 }
